2006-02-07 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp: load first from the shared config and then from user config
    * src/components/ogre/EmberOgre.cpp, src/components/ogre/OgreResourceLoader.cpp, src/components/ogre/TerrainGenerator.cpp: don't copy terrain.cfg and resource.cfg to the user directory, instead leave them in the installation dir
    * src/components/ogre/resources.cfg: fixed typo
    * src/components/ogre/widgets/LoadingBar.cpp: added extra check for null values

2006-02-06 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/Widget.pkg,  src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
    * src/components/ogre/widgets/Give.lua, src/components/ogre/widgets/ModelEdit.lua, src/components/ogre/widgets/ScriptEdit.lua, src/components/ogre/widgets/ServerBrowser.lua: update to use the static methods in ColoredListItem

2006-02-06 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/MovableObjectRenderer.cpp: fixed a bug where when pressing the middle mouse button while rotating the preview it wouldn't release the mouse
    * src/components/ogre/widgets/HelpWidget.xml: made the xml conform better to xml standards
    * src/components/ogre/widgets/Widget.*: 
        * added tab order feature
        * moved the createColoredListItem static methods from Widget to ColoredListItem
    * src/components/ogre/widgets/Help.cpp: updated the help text
    * src/components/ogre/widgets/ServerWidget.cpp: use the tab order


2006-02-06 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/input/Input.cpp:
        * fixed a problem with scroll wheel, though it doesn't seem to work anyway
        * changed so that a single right click switches between gui mode and movement mode, instead of double click as before

2006-02-05 Erik Hjortsberg  <erik@katastrof.nu>
