@@ -442,6 +442,7 @@ AC_CONFIG_FILES([Makefile
 		 src/components/ogre/scripting/bindings/lua/Makefile
 		 src/components/ogre/scripting/bindings/lua/ogre/Makefile
 		 src/components/ogre/scripting/bindings/lua/helpers/Makefile
+		 src/components/ogre/sound/Makefile
 		 src/components/ogre/ogreopcode/opcode/Makefile
 		 src/components/ogre/ogreopcode/Makefile
 		 src/components/ogre/Makefile
