@@ -1,5 +1,5 @@
 SUBDIRS = environment model SceneManagers input widgets \
-				carpenter jesus ogreopcode scripting cegui
+				carpenter jesus ogreopcode scripting cegui sound
 
 #gamesdir = $(bindir)/games
 bin_PROGRAMS = ember.bin
@@ -63,11 +63,13 @@ ember_bin_LDADD = $(top_builddir)/src/components/ogre/scripting/libScripting.a $
 	$(top_builddir)/src/components/ogre/environment/meshtree/libMeshTree.a \
 	$(top_builddir)/src/components/ogre/input/libInput.a $(top_builddir)/src/components/ogre/carpenter/libCarpenter.a \
 	$(top_builddir)/src/components/ogre/jesus/libJesus.a \
+	$(top_builddir)/src/components/ogre/sound/libSound.a \
 	$(top_builddir)/src/services/metaserver/libMetaserverService.a $(top_builddir)/src/services/scripting/libScriptingService.a \
 	$(top_builddir)/src/services/config/libConfigService.a $(top_builddir)/src/services/server/libServerService.a \
 	$(top_builddir)/src/framework/libFramework.a $(top_builddir)/src/extensions/libExtensions.a \
 	$(top_builddir)/src/components/ogre/ogreopcode/libOgreOpcode.a \
-	$(top_builddir)/src/components/ogre/ogreopcode/opcode/libOpcode.a $(EMBER_EXT_LIBS)
+	$(top_builddir)/src/components/ogre/ogreopcode/opcode/libOpcode.a $(EMBER_EXT_LIBS) 
+        
 
 
 ember_bin_SOURCES = Avatar.cpp ConsoleObjectImpl.cpp AvatarController.cpp \
