@@ -1,0 +1,6 @@
+INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src -DPREFIX=\"@prefix@\"
+#SUBDIRS = 
+noinst_LIBRARIES = libSound.a
+libSound_a_SOURCES = OgreSoundProvider.cpp 
+noinst_HEADERS = OgreSoundProvider.h
+
